clang/test/Preprocessor/include-nonalpha-no-crash.c
// RUN: %clang_cc1 %s -verify

#include "./" // expected-error {{'./' file not found}}
